<resources>
    <string name="app_name">CompuStoreV1.0</string>


    <string name="app_title">¡Bienvenido!</string>

    <string name="ScrClients_title">Clientes</string>
    <string name="ScrNewClient_title">Agregar Cliente</string>
    <string name="ScrNewClient_lastName">Apellido </string>
    <string name="ScrNewClient_firstName">Nombre </string>
    <string name="ScrNewClient_adress">Dirección </string>
    <string name="ScrNewClient_phone1">Teléfono 1 </string>
    <string name="ScrNewClient_phone2">Teléfono 2 </string>
    <string name="ScrNewClient_phone3">Teléfono 3 </string>
    <string name="ScrNewClient_email">Correo Electrónico </string>

    <string name="ScrNewClient_btnSave">Guardar </string>
    <string name="ScrNewClient_btnCancel">Cancelar </string>

    <string name="action_add">Agregar Cliente</string>
    <string name="action_close">Cerrar</string>

    <string name="spinner_label">Filtrar por: </string>

    <string name="l_nClient_Ph1">Tel.1 </string>
    <string name="l_nClient_Ph2">Tel.2 </string>
    <string name="l_nClient_Ph3">Tel.3 </string>

    <string name="customerFullName">Cliente:</string>
    <string name="orderId">OrdenID:</string>
    <string name="orderStatus">Estado Actual:</string>
    <string name="orderPrice">Monto:</string>
    <string name="orderDate">Fecha:</string>

    <string-array name="filtersClients">
        <item>Apellido</item>
        <item>Nombre</item>
        <item>Dirección</item>
        <item>Teléfono</item>
        <item>Correo Electrónico</item>
    </string-array>
    <string name="title_activity_detail_sales_resume">DetailSalesResume</string>

    <string name="ScReports_filtSpn">Procesar por</string>


    <string-array name="filterOrdersProcess">
        <item>Cliente</item>
        <item>Fecha</item>
        <item>Monto de Venta</item>
    </string-array>
    <!--ManuelLara!-->
    <string name="add_action">Add</string>
    <string name="settings_action">Settings</string>
    <string name="add_category_hint">Category Name</string>
    <string name="edit_category_hint">New Category Name</string>
    <string name="add_order_window">Add New Order</string>
    <string name="edit_order_window">Edit Order</string>
    <string name="delete_assemblyFromOrderTitle">Delete Assembly</string>
    <string name="delete_assemblyFromOrderMessage">Are you sure you want to delete the assembly?</string>


</resources>

