<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="?android:listSeparatorTextViewStyle">

    <TextView
        android:id="@+id/cust_fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:text="@string/customerFullName"

        android:textStyle="bold"
        android:textSize="@dimen/confSim_size"
        android:layout_marginLeft="@dimen/p_rep_ordSimSpn_sidePadd"
        android:layout_marginTop="@dimen/p_rep_ordSimSpn_topPadd"
        />
    <TextView
        android:id="@+id/txv_cust_fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/cust_fullName"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/confSim_size"
        tools:text="Aarón Madera"
        android:layout_marginLeft="@dimen/p_rep_ordSimSpn_sidePadd"
        android:layout_marginTop="@dimen/p_rep_ordSimSpn_topPadd"
        />

    <TextView
        android:id="@+id/ord_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txv_cust_fullName"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/confSim_size"
        android:text="@string/orderId"

        android:layout_marginLeft="@dimen/p_rep_ordSimSpn_sidePadd"
        android:layout_marginTop="@dimen/p_rep_ordSimSpn_topPadd"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/txv_ord_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ord_Id"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/confSim_size"
        tools:text="222"
        android:textStyle="bold"
        android:textColor="@color/colorOrderID"

        android:layout_marginLeft="@dimen/p_rep_ordSimSpn_sidePadd"
        android:layout_marginTop="@dimen/p_rep_ordSimSpn_topPadd"
        />

    <TextView
        android:id="@+id/ord_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txv_cust_fullName"

        android:textSize="@dimen/confSim_size"
        android:text="@string/orderPrice"

        android:textStyle="bold"
        android:layout_marginLeft="@dimen/p_rep_ordSimSpn_sidePadd"
        android:layout_marginTop="@dimen/p_rep_ordSimSpn_topPadd"
        />
    <TextView
        android:id="@+id/txv_ord_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ord_price"
        android:layout_below="@id/txv_cust_fullName"
        android:textSize="@dimen/confSim_size"
        tools:text="$33,000,00.78"

        android:layout_marginLeft="@dimen/p_rep_ordSimSpn_sidePadd"
        android:layout_marginTop="@dimen/p_rep_ordSimSpn_topPadd"
        />
    <TextView
        android:id="@+id/ord_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txv_ord_price"
        android:layout_below="@id/txv_cust_fullName"
        android:textSize="@dimen/confSim_size"
        android:text="@string/orderDate"
        android:layout_marginLeft="@dimen/p_rep_ordSimSpn_sidePadd"
        android:layout_marginTop="@dimen/p_rep_ordSimSpn_topPadd"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/txv_ord_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ord_date"
        android:layout_below="@id/txv_cust_fullName"
        android:textSize="@dimen/confSim_size"
        tools:text="12-12-2016"

        android:layout_marginLeft="@dimen/p_rep_ordSimSpn_sidePadd"
        android:layout_marginTop="@dimen/p_rep_ordSimSpn_topPadd"
        />

    <TextView
        android:id="@+id/ord_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/ord_price"
        android:textSize="@dimen/confSim_size"
        android:text="@string/orderStatus"

        android:layout_marginLeft="@dimen/p_rep_ordSimSpn_sidePadd"
        android:layout_marginTop="@dimen/p_rep_ordSimSpn_topPadd"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/txv_ord_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ord_status"
        android:layout_below="@id/ord_price"
        android:textSize="@dimen/confSim_size"
        tools:text="Confirmado"

        android:layout_marginLeft="@dimen/p_rep_ordSimSpn_sidePadd"
        android:layout_marginTop="@dimen/p_rep_ordSimSpn_topPadd"
        />



</RelativeLayout>